--- a/index.html
+++ b/index.html
@@ -1,235 +1,308 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>1Notes</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <title>Notes</title>
 
-<style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: #fff;
-}
+  <link rel="manifest" href="manifest.json">
 
-/* ===== Screens ===== */
-.screen {
-  display: none;
-}
-.screen.active {
-  display: block;
-}
+  <style>
+    * {
+      box-sizing: border-box;
+      -webkit-tap-highlight-color: transparent;
+    }
 
-/* ===== Notes List ===== */
-#notesList {
-  padding: 16px;
-}
-.note-item {
-  padding: 12px;
-  border-bottom: 1px solid #eee;
-}
-.note-item strong {
-  display: block;
-}
-.new-note {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  font-size: 28px;
-  border-radius: 50%;
-  width: 56px;
-  height: 56px;
-}
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background: #fff;
+      color: #000;
+      height: 100vh;
+      overflow: hidden;
+    }
 
-/* ===== Editor ===== */
-#editor {
-  padding: 16px;
-  padding-bottom: 90px;
-}
+    /* ===== NOTES LIST ===== */
+    #listView {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
 
-.line {
-  outline: none;
-  margin: 4px 0;
-  line-height: 1.35;
-}
+    header {
+      padding: 16px;
+      font-size: 22px;
+      font-weight: 600;
+      border-bottom: 1px solid #ddd;
+    }
 
-.normal { font-size: 18px; }
-.title { font-size: 28px; font-weight: 700; }
-.subtitle { font-size: 22px; font-weight: 600; }
+    #notesList {
+      flex: 1;
+      overflow-y: auto;
+    }
 
-/* ===== Toolbar ===== */
-.toolbar {
-  position: fixed;
-  left: 0;
-  width: 100%;
-  display: flex;
-  gap: 6px;
-  padding: 8px;
-  background: #f2f2f2;
-  border-top: 1px solid #ddd;
-}
+    .note-item {
+      padding: 14px 16px;
+      border-bottom: 1px solid #eee;
+      cursor: pointer;
+    }
 
-.toolbar button {
-  padding: 6px 10px;
-  border-radius: 6px;
-  border: none;
-}
+    .note-item:hover {
+      background: #f5f5f5;
+    }
 
-/* Checkbox */
-.checkbox {
-  cursor: pointer;
-  user-select: none;
-}
-</style>
+    .note-title {
+      font-weight: 500;
+      margin-bottom: 4px;
+    }
+
+    .note-preview {
+      font-size: 14px;
+      color: #666;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    #newNoteBtn {
+      margin: 16px;
+      padding: 12px;
+      font-size: 16px;
+      border-radius: 10px;
+      border: none;
+      background: #ffd60a;
+      font-weight: 600;
+      cursor: pointer;
+    }
+
+    /* ===== EDITOR ===== */
+    #editorView {
+      display: none;
+      height: 100vh;
+      flex-direction: column;
+    }
+
+    #editorHeader {
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+    }
+
+    #backBtn {
+      font-size: 18px;
+      margin-right: 12px;
+      cursor: pointer;
+    }
+
+    #editor {
+      flex: 1;
+      padding: 16px;
+      font-size: 18px;
+      outline: none;
+      overflow-y: auto;
+    }
+
+    #editor div {
+      min-height: 1.2em;
+    }
+
+    /* ===== CHECKBOX LINES ===== */
+    .checkbox-line {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .checkbox-line input {
+      width: 18px;
+      height: 18px;
+      cursor: pointer;
+    }
+
+    .checkbox-line span {
+      flex: 1;
+    }
+
+    /* ===== TOOLBAR ===== */
+    #toolbar {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      display: flex;
+      gap: 8px;
+      padding: 10px;
+      background: #f2f2f2;
+      border-top: 1px solid #ddd;
+      z-index: 1000;
+    }
+
+    #toolbar button {
+      flex: 1;
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 10px;
+      border: none;
+      background: #fff;
+      cursor: pointer;
+    }
+  </style>
 </head>
 
 <body>
 
-<!-- NOTES LIST -->
-<div id="listScreen" class="screen active">
+<!-- ===== NOTES LIST VIEW ===== -->
+<div id="listView">
+  <header>Notes</header>
   <div id="notesList"></div>
-  <button class="new-note" onclick="createNote()">＋</button>
+  <button id="newNoteBtn">New Note</button>
 </div>
 
-<!-- EDITOR -->
-<div id="editorScreen" class="screen">
-  <div id="editor"></div>
+<!-- ===== EDITOR VIEW ===== -->
+<div id="editorView">
+  <div id="editorHeader">
+    <div id="backBtn">‹ Notes</div>
+  </div>
 
-  <div class="toolbar" id="toolbar">
-    <button onclick="setStyle('title')">Title</button>
-    <button onclick="setStyle('subtitle')">Subtitle</button>
-    <button onclick="setStyle('normal')">Text</button>
-    <button onclick="document.execCommand('bold')"><b>B</b></button>
-    <button onclick="document.execCommand('italic')"><i>I</i></button>
-    <button onclick="document.execCommand('underline')"><u>U</u></button>
-    <button onclick="insertCheckbox()">☐</button>
+  <div id="editor" contenteditable="true"></div>
+
+  <div id="toolbar">
+    <button id="checkboxBtn">☑︎</button>
+    <button id="clearBtn">Clear</button>
   </div>
 </div>
 
 <script>
-/* ===== Storage ===== */
-let notes = JSON.parse(localStorage.getItem("notes") || "[]");
-let currentNote = null;
-const notesList = document.getElementById("notesList");
-const editor = document.getElementById("editor");
+  let notes = JSON.parse(localStorage.getItem("notes") || "[]");
+  let currentId = null;
 
-/* ===== Navigation ===== */
-function show(screen) {
-  document.querySelectorAll(".screen").forEach(s => s.classList.remove("active"));
-  document.getElementById(screen).classList.add("active");
-}
+  const listView = document.getElementById("listView");
+  const editorView = document.getElementById("editorView");
+  const notesList = document.getElementById("notesList");
+  const editor = document.getElementById("editor");
+  const toolbar = document.getElementById("toolbar");
 
-/* ===== Notes List ===== */
-function renderList() {
-  notesList.innerHTML = "";
-  notes.forEach((n, i) => {
-    const div = document.createElement("div");
-    div.className = "note-item";
-    div.innerHTML = `<strong>${n.preview || "New Note"}</strong>`;
-    div.onclick = () => openNote(i);
-    notesList.appendChild(div);
-  });
-}
-renderList();
-
-/* ===== Create / Open ===== */
-function createNote() {
-  const note = { content: "", preview: "" };
-  notes.unshift(note);
-  save();
-  openNote(0);
-}
-
-function openNote(index) {
-  currentNote = index;
-  editor.innerHTML = "";
-  if (notes[index].content) {
-    editor.innerHTML = notes[index].content;
-    rebindLines();
-  } else {
-    createLine();
+  function saveNotes() {
+    localStorage.setItem("notes", JSON.stringify(notes));
   }
-  show("editorScreen");
-}
 
-/* ===== Editor Lines ===== */
-function createLine(type="normal") {
-  const div = document.createElement("div");
-  div.className = `line ${type}`;
-  div.contentEditable = true;
-  editor.appendChild(div);
-  placeCaret(div);
+  function renderList() {
+    notesList.innerHTML = "";
+    notes.forEach(note => {
+      const div = document.createElement("div");
+      div.className = "note-item";
+      div.innerHTML = `
+        <div class="note-title">${note.text.split("\n")[0] || "New Note"}</div>
+        <div class="note-preview">${note.text.replace(/\n/g, " ")}</div>
+      `;
+      div.onclick = () => openNote(note.id);
+      notesList.appendChild(div);
+    });
+  }
 
-  div.onkeydown = e => {
-    if (e.key === "Enter") {
-      e.preventDefault();
-      createLine();
+  function openNote(id) {
+    currentId = id;
+    const note = notes.find(n => n.id === id);
+    editor.innerHTML = "";
+    note.text.split("\n").forEach(line => {
+      const div = document.createElement("div");
+      div.textContent = line;
+      editor.appendChild(div);
+    });
+
+    listView.style.display = "none";
+    editorView.style.display = "flex";
+    editor.focus();
+  }
+
+  function newNote() {
+    const note = { id: Date.now(), text: "" };
+    notes.unshift(note);
+    saveNotes();
+    renderList();
+    openNote(note.id);
+  }
+
+  function backToList() {
+    const content = Array.from(editor.children).map(d => d.textContent).join("\n").trim();
+
+    if (!content) {
+      notes = notes.filter(n => n.id !== currentId);
+    } else {
+      const note = notes.find(n => n.id === currentId);
+      note.text = content;
     }
-    if (e.key === "Backspace" && div.textContent === "") {
-      const prev = div.previousElementSibling;
-      if (prev) {
-        e.preventDefault();
-        div.remove();
-        placeCaret(prev);
-      }
+
+    saveNotes();
+    renderList();
+
+    editorView.style.display = "none";
+    listView.style.display = "flex";
+  }
+
+  editor.addEventListener("input", () => {
+    const note = notes.find(n => n.id === currentId);
+    if (note) {
+      note.text = Array.from(editor.children).map(d => d.textContent).join("\n");
+      saveNotes();
+    }
+  });
+
+  document.getElementById("checkboxBtn").onclick = () => {
+    const sel = window.getSelection();
+    if (!sel.rangeCount) return;
+
+    const range = sel.getRangeAt(0);
+    const line = range.startContainer.closest("div");
+    if (!line) return;
+
+    const wrapper = document.createElement("div");
+    wrapper.className = "checkbox-line";
+
+    const checkbox = document.createElement("input");
+    checkbox.type = "checkbox";
+
+    const text = document.createElement("span");
+    text.textContent = line.textContent;
+
+    wrapper.appendChild(checkbox);
+    wrapper.appendChild(text);
+
+    line.replaceWith(wrapper);
+  };
+
+  document.getElementById("clearBtn").onclick = () => {
+    editor.innerHTML = "";
+    const note = notes.find(n => n.id === currentId);
+    if (note) {
+      note.text = "";
+      saveNotes();
     }
   };
 
-  div.onclick = e => {
-    if (e.target.classList.contains("checkbox")) {
-      e.target.textContent = e.target.textContent === "☐" ? "☑" : "☐";
-    }
-  };
-}
+  document.getElementById("newNoteBtn").onclick = newNote;
+  document.getElementById("backBtn").onclick = backToList;
 
-function rebindLines() {
-  document.querySelectorAll(".line").forEach(l => {
-    l.contentEditable = true;
-  });
-}
+  /* ===== Keyboard-aware toolbar ===== */
+  function adjustToolbar() {
+    if (!window.visualViewport) return;
+    const keyboardHeight =
+      window.innerHeight -
+      window.visualViewport.height -
+      window.visualViewport.offsetTop;
 
-/* ===== Formatting ===== */
-function setStyle(type) {
-  const sel = window.getSelection();
-  if (!sel.anchorNode) return;
-  const line = sel.anchorNode.closest(".line");
-  if (line) line.className = `line ${type}`;
-}
-
-function insertCheckbox() {
-  document.execCommand("insertHTML", false, `<span class="checkbox">☐</span> `);
-}
-
-/* ===== Caret ===== */
-function placeCaret(el) {
-  el.focus();
-  const r = document.createRange();
-  r.selectNodeContents(el);
-  r.collapse(false);
-  const s = window.getSelection();
-  s.removeAllRanges();
-  s.addRange(r);
-}
-
-/* ===== Auto Save ===== */
-function save() {
-  localStorage.setItem("notes", JSON.stringify(notes));
-}
-
-setInterval(() => {
-  if (currentNote !== null) {
-    notes[currentNote].content = editor.innerHTML;
-    notes[currentNote].preview =
-      editor.textContent.trim().split("\n")[0] || "";
-    save();
+    toolbar.style.bottom =
+      keyboardHeight > 100 ? keyboardHeight + "px" : "0px";
   }
-}, 500);
 
-/* ===== Back gesture ===== */
-window.onpopstate = () => {
-  show("listScreen");
+  if (window.visualViewport) {
+    window.visualViewport.addEventListener("resize", adjustToolbar);
+    window.visualViewport.addEventListener("scroll", adjustToolbar);
+  }
+
+  adjustToolbar();
   renderList();
-};
 </script>
 
 </body>
